[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenwithenvy"
dynamic = ["version"]
description = "Easy GPU switching for Nvidia Optimus laptops under Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "lechibang-1512", email = "throwawaybard76@gmail.com" },
]
keywords = ["nvidia", "optimus", "prime", "gpu", "linux"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
greenwithenvy = "greenwithenvy:main"

[project.urls]
Homepage = "https://github.com/lechibang-1512/greenwithenvy"

[tool.setuptools]
py-modules = ["greenwithenvy"]

[tool.setuptools.dynamic]
version = {attr = "greenwithenvy.VERSION"}
